icons svg and png updated. Line height fixes for desktop. Dropdown fix for beige bg going out of box

--- a/web/themes/custom/myusf/sass/src/partials/_boxes.scss
+++ b/web/themes/custom/myusf/sass/src/partials/_boxes.scss
@@ -1747,8 +1747,11 @@ div[data-oembed-url]  > iframe {
             @include media-breakpoint-up(landscape_phone) {
                 line-height: 1.8rem;
             }
-            @include media-breakpoint-up(large_desktop) {
-                line-height: 1.4rem;
+            @include media-breakpoint-up(desktop) {
+                line-height: 1.2rem;
+            }
+            @include media-breakpoint-up(midlarge_desktop) {
+                line-height: 2rem;
             }
         }
     }
@@ -2164,8 +2167,8 @@ input#edit-submit-community-grid {
     display: inline-block;
     content: "";
     width: 25px;
-    height: 40px; /*25px*/
-    top: -8px; /*0*/
+    height: 35px; /*25px*/
+    top: -6px; /*0*/
     right: 0px;
     background: $beige;
     pointer-events: none;   /*important for letting it clickable over the icon*/
